package camera_utils.msgs;

message CameraInfo
{
    /** Type of request */
    enum Type{
        /** Acquire frame and save it to disk */
        RGB     = 1;
        /** Change output directory */
        DEPTH   = 2;
        /** From 3d to 2d camera point */
        RGBD    = 3;
    }

    /** Type of request */
    optional Type   type    = 1;

    optional double width   = 2;

    optional double height  = 3;

    optional double depth   = 4;
}
