package world_utils.msgs;

import "vector3d.proto";

message BoundingBox
{
    /* @brief Bounding box center */
    optional gazebo.msgs.Vector3d   bb_center       = 1;
    /* @brief Bounding box dimensions */
    optional gazebo.msgs.Vector3d   bb_size         = 2;
    /* @brief Object name */
    optional string                 name            = 3;
}
